wallet functionalized in checkout

--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -35,7 +35,7 @@
             </div>
           </div>
     </div>
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 mb-12">
         <thead class="text-xs text-gray-700 uppercase bg-orange-200  dark:text-gray-400">
             <tr>
                 <th scope="col" class="p-4">
