--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -79,38 +79,21 @@ initTWE({ Dropdown, Ripple });
         <div class="relative flex"
         data-twe-input-wrapper-init
         data-twe-input-group-ref>
-        <input
-          type="search"
-          class="peer mt-5 block min-h-[auto] w-96 h-7  border border-gray-500 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[twe-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-gray-950 dark:placeholder:text-gray-900 dark:autofill:shadow-autofill dark:peer-focus:text-primary [&:not([data-twe-input-placeholder-active])]:placeholder:opacity-0"
-          placeholder="Search"
-          aria-label="Search"
-          id="searchInput"
-          aria-describedby="basic-addon1" />
+        <input type="search" class="peer mt-5 block min-h-[auto] w-96 h-7  border border-gray-500 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[twe-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-gray-950 dark:placeholder:text-gray-900 dark:autofill:shadow-autofill dark:peer-focus:text-primary [&:not([data-twe-input-placeholder-active])]:placeholder:opacity-0" placeholder="Search" aria-label="Search" id="searchInput" aria-describedby="basic-addon1" />
 
           <button
           class="my-5 mr-12 ml-2 w-16 h-7 border border-gray-500 relative z-[2] -ms-0.5 hover:bg-white hover:text-gray-950 flex items-center bg-black px-5 text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
-          type="button"
-          id="searchButton"
-          data-twe-ripple-init
-          data-twe-ripple-color="light">
+          type="button" id="searchButton" data-twe-ripple-init data-twe-ripple-color="light">
           <span class="[&>svg]:h-3 [&>svg]:w-3">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
             </svg>
           </span>
         </button>
              </div>
                   <a href="/home" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Home</a>
                   <a href="/shopping" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Shopping</a>
-                  <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a>
+                  <!-- <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-xs my-5 font-thin">Wishlist</a> -->
                   <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Cart</a>
                   <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">My Account</a>
                   <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-xs my-5 font-thin">Logout</a>
