ordered the models

--- a/views/partials/userProfileSidebar.ejs
+++ b/views/partials/userProfileSidebar.ejs
@@ -203,7 +203,7 @@
               </a>
      
             
-              <a href="#" class="flex items-center space-x-2 text-indigo-600 transition-colors rounded-lg group hover:bg-indigo-600 hover:text-white"
+              <a href="/wallet" class="flex items-center space-x-2 text-indigo-600 transition-colors rounded-lg group hover:bg-indigo-600 hover:text-white"
               >
                 <span
                   aria-hidden="true"
@@ -220,7 +220,7 @@
                     />
                   </svg>
                 </span>
-                <span>Paynet Method</span>
+                <span>Wallet</span>
               </a>
               <a
                 href="/login"
