--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -1,50 +1,45 @@
 
 <%- include('../partials/header') %>
-
 <main>
-
 <section class="h-14 text-center mt-7 p-4">
     <span class="michroma-regular">SEARCH</span>
 </section>
 
-
-<section class="flex justify-end items-end">
-
-
+<!-- <section class="flex justify-end items-end">
     <div class="relative">
       <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-9 w-44 rounded-full border border-gray-950 bg-gray-50  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
         <span class="flex items-center font-thin">Sort items</span>
         <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
       </button>
   
-      <!-- Dropdown menu -->
+   
       <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-100 text-gray-950">
         <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
           <li>
-            <a href="/lowToHigh/<%= category %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Price: low to high</a>
+            <a href="/lowToHigh/<%= product %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Price: low to high</a>
           </li>
           <li>
-            <a href="/HighToLow/<%= category %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Price: high to low</a>
+            <a href="/HighToLow/<%= product %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Price: high to low</a>
           </li>
           <li>
-            <a href="/newArrivals/<%= category %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">New arrivals</a>
+            <a href="/newArrivals/<%= product %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">New arrivals</a>
           </li>
           <li>
-            <a href="/AtoZ/<%= category %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, A-Z</a>
+            <a href="/AtoZ/<%= product %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, A-Z</a>
           </li>
           <li>
-            <a href="/ZtoA/<%= category %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, Z-A</a>
+            <a href="/ZtoA/<%= product %>" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, Z-A</a>
           </li>
         </ul>
       </div>
     </div>
-  </section>
+  </section> -->
 
 <section class="mt-5">
     <div class="bg-white flex">
         <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8">
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-                <% products.forEach( product => { %>
+                <% product.forEach( product => { %>
                 <div class="group relative">
                     <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-transparent lg:aspect-none group-hover:opacity-75 lg:h-80">
                        <a href="#"> <img src="/product_images/<%= product.productImage[0] %>"></a>
@@ -71,12 +66,12 @@
 <section class="flex justify-center mt-8">
   <div class="">
     <!-- <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> < </button> -->
-   <% for(let i = 1; i < totalProduct + 1; i++){ %>
+   <!-- <% for(let i = 1; i < totalProduct + 1; i++){ %>
 
-   <a class="ml-9 font-sans" href="/pagination/<%= i %>/<%= category %>"> <%= i %> </a>
+ 
 
 
-   <% } %>
+   <% } %> -->
    <!-- <button class="font-thin  hover:bg-gray-300 px-3 py-1 rounded-r"> > </button> -->
   </div>
 </section>
