--- a/views/user/addressEdit.ejs
+++ b/views/user/addressEdit.ejs
@@ -22,7 +22,7 @@
           <div class="sm:col-span-4">
             <label for="mobile" class="block text-sm font-medium leading-6 text-gray-900">Mobile No</label>
             <div class="mt-2">
-              <input id="mobile" name="mobile" value="<%= address.mobile %>" type="number" autocomplete="mobile" class="block w-full  border border-gray-950 py-1.5 text-gray-900 shadow-sm  ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+              <input id="mobile" name="mobile" min="10" value="<%= address.mobile %>" type="number" autocomplete="mobile" class="block w-full  border border-gray-950 py-1.5 text-gray-900 shadow-sm  ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
             </div>
           </div>
           <div class="sm:col-span-4">
@@ -37,6 +37,12 @@
               <input type="text" name="address" id="address" value="<%= address.address %>" autocomplete="address" class="block w-full border border-gray-950 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
             </div>
           </div>
+          <div class="col-span-full">
+            <label for="pincode" class="block text-sm font-medium leading-6 text-gray-900">Pincode</label>
+            <div class="mt-2">
+              <input type="text" name="pincode" min="5" id="pincode" value="<%= address.pincode %>" autocomplete="pincode" class="block w-full border border-gray-950 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+          </div>
           <div class="sm:col-span-2 sm:col-start-1">
             <label for="city" class="block text-sm font-medium leading-6 text-gray-900">City</label>
             <div class="mt-2">
@@ -49,17 +55,9 @@
               <input type="text" name="state" id="state" value="<%= address.state %>" autocomplete="address-level1" class="block w-full  border border-gray-950 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
             </div>
           </div>
-          <div class="sm:col-span-2">
-            <label for="addressType" class="block text-sm font-medium leading-6 text-gray-900">Address Type</label>
-            <div class="mt-2">
-              <input type="text" name="addressType" id="addressType" value="<%= address.addressType %>" autocomplete="address-level1" class="block w-full  border border-gray-950 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-            </div>
-          </div>
 
-
-
-    <div class="flex w-32 items-center justify-center gap-x-6 bg-red-500">
-      <button type="submit" class=" bg-ind border-gray-950o-600 px-3 py-2 text-sm font-semibold text-gray-100 shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Update</button>
+    <div class="flex w-32 h-12 mt-4 items-center justify-center gap-x-6 bg-red-500">
+      <button type="submit" class=" bg-ind border-gray-950o-600 px-3 py-1 h-5 text-sm font-semibold text-gray-100 shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Update</button>
     </div>
   </form>
   </section>
