--- a/views/user/userAddress.ejs
+++ b/views/user/userAddress.ejs
@@ -4,63 +4,55 @@
     <section class="justify-start">
         <%- include('../partials/userProfileSidebar') %>
     </section>
-    
-    <section class="w-64">
-        <a href="/addAddress" class="px-8 py-0.5 font-light text-sm border border-black dark:border-gray-950  text-neutarl-700  ">
+    <!------------ new address -------------->
+    <section class="w-64 mt-5">
+          <a href="/addAddress" type="button" class="relative px-8 py-2 w-32 h-8 ml-4 overflow-hidden font-semibold rounded dark:bg-gray-800 dark:text-gray-50">
             Add New
-          </a>
+            <span class="absolute top-0 right-0 px-5 py-0 text-xs tracking-wider text-center uppercase whitespace-no-wrap origin-bottom-left transform rotate-45 -translate-y-full translate-x-1/3 dark:bg-violet-600">New</span>
+        </a>
     </section>
+
+    <!------------ address -------------->
+    <section>
+         <% address.forEach( add => { %>
+         <div class="relative flex flex-col mt-6 text-gray-700 bg-white shadow-md bg-clip-border rounded-xl w-96">
+          <div class="p-6">
+              <h5 class="block mb-2 font-sans text-xl antialiased font-semibold leading-snug tracking-normal text-blue-gray-900">
+           <%= add.name %>
+              </h5>
+              <p class="block font-sans text-base antialiased font-light leading-relaxed text-inherit">
+           <%= add.mobile %>
+              </p>
+              <p class="block font-sans text-base antialiased font-light leading-relaxed text-inherit">
+           <%= add.address %> ,
+              <%= add.pincode %> ,
+              </p>
+              <p class="block font-sans text-base antialiased font-light leading-relaxed text-inherit">
+           <%= add.city %> ,
+           <%= add.state %> ,
+           <%= add.country %> ,
+              </p>
+          </div>
+          <div class="p-6 pt-0">
+        
+         
+             <p class="block font-sans text-base antialiased font-light leading-relaxed text-inherit">
+                <a href="/editAddress/<%= add.id %>" class="align-middle select-none font-sans font-bold text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-1 px-4 rounded-lg bg-violet-900 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none">
+                    Edit Address
+                      </a>
+                      </p>
+                         <a href="/deleteAddress/<%= add.id %>" class="">
+                    <svg xmlns="http://www.w3.org/2000/svg"  class="w-4 h-4 hover:text-blue-500" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                      </svg>
+                  </a>
+      
+    </div>
+             </div>
+             <% }) %>
+            </section>
     
-    <section class="justify-start border-gray-800 h-full w-full m-28 border">
-      <div class="p-10">
-          <div class="px-4 sm:px-0">
-              <p class="mt-1 font-bold max-w-2xl text-sm leading-6 text-gray-800">Personal Address</p>
-          </div>
-          <div class="mt-6 grid grid-cols-1 gap-4 sm:grid-cols-3 ">
-              <% address.forEach( add => { %>
-              <div class="border-t border-gray-100 bg-white rounded-md shadow-md overflow-hidden border">
-                  <dl class="divide-y divide-gray-100">
-                      <div class="px-4 py-6">
-                          <dt class="text-sm font-medium leading-6 text-gray-900">Name</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.name %></dd>
-                      </div>
-                      <div class="px-4 py-6">
-                          <dt class="text-sm font-medium leading-6 text-gray-900">Mobile No</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.mobile %></dd>
-                      </div>
-                      <div class="px-4 py-6">
-                          <dt class="text-sm font-medium leading-6 text-gray-900">Address</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.address %></dd>
-                          <dt class="text-sm font-medium leading-6 text-gray-900">Pincode</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.pincode %></dd>
-                          <dt class="text-sm font-medium leading-6 text-gray-900">City</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.city %></dd>
-                          <dt class="text-sm font-medium leading-6 text-gray-900">State</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.state %></dd>
-                      </div>
-                      <div class="px-4 py-6">
-                          <dt class="text-sm font-medium leading-6 text-gray-900">Address Type</dt>
-                          <dd class="mt-1 text-sm leading-6 text-gray-700"><%= add.addressType %></dd>
-                          <a href="/editAddress/<%= add.id %>" class="mt-1 text-sm leading-6 text-gray-700">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4">
-                              <path d="m2.695 14.762-1.262 3.155a.5.5 0 0 0 .65.65l3.155-1.262a4 4 0 0 0 1.343-.886L17.5 5.501a2.121 2.121 0 0 0-3-3L3.58 13.419a4 4 0 0 0-.885 1.343Z" />
-                            </svg>
-                          </a>
-                      </div>
-                      <div class="px-4 py-6">
-                      
-                          <a href="/deleteAddress/<%= add.id %>" class="mt-1 text-sm leading-6 text-gray-700">
-                            <svg xmlns="http://www.w3.org/2000/svg"  class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                              </svg>
-                          </a>
-                      </div>
-                  </dl>
-              </div>
-              <% }) %>
-          </div>
-      </div>
-  </section>
+ 
   
 </main>
 
